# interactive-images

./: Dockerfile  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  zoedepth_post_processing.py
.devcontainer/: devcontainer.json
notebooks/: Image_to_3D.ipynb  ZoeDepth--Absolute_Depth_Estimation.ipynb  depth_estimation.py  image_to_mesh.py  tools.py  zoedepth_post_processing.py
src/interactive_images/: __init__.py  image_to_mesh.py  renderer.py  tools.py
src/interactive_images/models/: __init__.py  depth_estimation.py  zoedepth_post_processing.py
tests/: test_image_to_mesh.py  test_renderer.py
tests/models/: test_zoedepth.py
